--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,9 @@
 name=LedControl
 version=1.0.7
 author=Eberhard Fahle <e.fahle@wayoda.org>
-maintainer=Eberhard Fahle <e.fahle@wayoda.org>
+maintainer=Philippe <phd0@gmail.com>
 sentence=A library for the MAX7219 and the MAX7221 Led display drivers.
 paragraph=The library supports multiple daisychained drivers and supports Led-Matrix displays as well as 7-Segment displays.
 category=Display
-url=http://wayoda.github.io/LedControl/
+url=http://phd0.github.io/LedControl/
 architectures=*
-
